interface.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interface
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: interface
  template:
    metadata:
      labels:
        app: interface
    spec:
      containers: 
        - name: interface
          image: obrol/interface_nginx
          imagePullPolicy: Never
          ports: 
            - containerPort: 80
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata: 
  name: interface
spec:
  selector:
    app: interface
  ports:
    - port: 3000
      targetPort: 80
  type: LoadBalancer
