mongodb.yaml
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: mongo-pvc
# spec:
#   storageClassName: ""
#   accessModes:
#     - ReadWriteOnce 
#   resources:
#     requests:
#       storage: 256Mi
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: mongo-pv
# spec:
#   accessModes:
#     - ReadWriteOnce
#   capacity:
#     storage: 256Mi
#   hostPath:
#     path: /data/mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:3.6.17-xenial
          ports:
            - containerPort: 27017
          # volumeMounts:
          #   - name: storage
          #     mountPath: /data/db
      # volumes:
      #   - name: storage
      #     persistentVolumeClaim:
      #       claimName: mongo-pvc
