nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: composer-app
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: composer-app
  template:
    metadata:
      labels:
        app: composer-app
    spec:
      containers: 
        - name: composer-app
          image: obrol/nginx_web_app
          imagePullPolicy: Never
          ports: 
            - containerPort: 3003
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata: 
  name: composer-app
spec:
  selector:
    app: composer-app
  ports:
    - port: 3003
      targetPort: 3003
  type: LoadBalancer
