web_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers: 
        - name: app
          image: obrol/head_web_app
          ports: 
            - containerPort: 4321
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata: 
  name: web-app
spec:
  selector:
    app: web-app
  ports:
    - port: 3000
      targetPort: 4321
