ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: obraztsov.hse.dc 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: interface
                port:
                  number: 3000
          - path: /web_app
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 3000
